Project: improve new project form style

--- a/app/assets/stylesheets/less/_override.less
+++ b/app/assets/stylesheets/less/_override.less
@@ -284,3 +284,6 @@ li.select2-result-with-children:first-of-type {
 .label {
   border-radius: 1px;
 }
+.select2-without-searchbox .select2-search {
+    display: none;
+}
