--- a/app/assets/stylesheets/less/_yobiUI.less
+++ b/app/assets/stylesheets/less/_yobiUI.less
@@ -40,7 +40,7 @@ input[type="search"], input[type="tel"], input[type="color"], .uneditable-input 
 
     &:focus {
         .box-shadow(none);
-        border-color:@primary;
+        border-color:@primary !important;
     }
 }
 
