--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -564,20 +564,10 @@
     label { cursor:pointer; .inline-block; }
 }
 
-/*.user-thumb-wrap {
-    border: 1px solid #B4B4B4;
-    .border-radius(3px);
-    .inline-block;
-}*/
-
 .checkbox {
     .inline-block;
     vertical-align:top;
     margin:2px !important;
-}
-
-.label-public, .label-private, .label-agreement {
-   .form-label;
 }
 
 .forked-from {
@@ -1415,57 +1405,39 @@
 //-- new project
 .form-wrap {
     &.new-project {
-        margin: 30px 19px 0px 19px;
+        width:700px;
+        margin: 30px auto;
 
         .text {
-            width: 99%;/*866px;*/
+            width: 99%;
             &.textarea {
                 height: 78px;
-                resize: none;
-            }
-        }
-        .options {
-            background-color: #F7F7F7;
-            margin-bottom: 20px;
-            .border-radius(10px);
-
-            .option {
-                padding: 15px 20px;
-                border-bottom: 1px solid #E9E9E9;
-                &:first-child {
-                    padding-top:24px;
-                }
-                &:last-child {
-                    border-bottom: 0 none;
-                    padding-bottom:24px;
-                }
-                .option-label {
-                    float: left;
-                    width: 125px;
-                    line-height:29px;
-                }
-                .option-desc {
-                    margin-left: 125px;
-                    label {
-                        display: inline;
-                        color: #777;
-                    }
-                    .note {
-                        margin-left: 10px;
-                        color: #777; /*BDBDBD;*/
-                        font-size: 12px;
-                    }
-                }
-            }
-
-            .d-label, .dropdown-menu {
-                width:182px;
+                resize: vertical;
             }
         }
 
         .actions {
             text-align: center;
             position: relative;
+        }
+
+        .project-scopes {
+            .icon-scope {
+                font-size:18px;
+                margin:0 10px 20px 7px;
+            }
+            .note {
+                color:#777;
+                font-size:11px;
+                margin-left:22px;
+            }
+            label { display: block; }
+        }
+
+        .advanced-options {
+            padding:10px 0;
+            background:#fafafa;
+            .border-radius(10px);
         }
     }
 }
