--- a/app/views/project/importing.scala.html
+++ b/app/views/project/importing.scala.html
@@ -25,95 +25,98 @@
 
 @siteLayout(title, utils.MenuType.NEW_PROJECT){
 <div class="page-wrap-outer">
-    <div class="project-page-wrap">
-        <div class="form-wrap new-project">
-            <form id="importGit" action="@routes.ImportApp.newProject()" method="post" name="newproject" class="frm-wrap">
-                <legend>
-                    @Messages("project.import.from.git")
-                    <span>
-                        <small>@Messages("project.import.or") &nbsp </small><a href="@routes.ProjectApp.newProjectForm()" class="btn btn-small"><strong>@Messages("title.newProject")</strong></a>
-                    </span>
-                </legend>
-                <dl>
-                    <dt>
-                      <div class="n-alert" data-errType="url">
-                          <div class="orange-txt">
-                              @if(newProjectForm.error("url") != null) { <span class="warning">@Messages(newProjectForm.error("url").message())</span> }
-                          </div>
-                      </div>
-                      <label>@Messages("project.git.repository.url")</label>
-                    </dt>
-                    <dd>
-                        <input type="text" name="url" class="text" placeholder="@Messages("project.git.url.alert")" value="@newProjectForm.field("url").value">
-                    </dd>
-                    <dt>
-                      <div class="n-alert" data-errType="owner">
-                          <div class="orange-txt">
-                              @if(newProjectForm.error("owner") != null) { <span class="warning">@Messages(newProjectForm.error("owner").message())</span> }
-                          </div>
-                      </div>
-                      <label for="ownership">@Messages("project.owner.placeholder")</label>
-                    </dt>
-                    <dd>
-                      <select id="project-owner" name="owner">
-                          <option data-type="user" value="@UserApp.currentUser().loginId">@UserApp.currentUser().loginId</option>
-                          @for(orgUser <- orgUserList) {
-                              <option data-type="group" value="@orgUser.organization.name" @if(newProjectForm.field("owner").value == orgUser.organization.name) { selected }>@orgUser.organization.name</option>
-                          }
-                      </select>
-                    </dd>
-                    <dt>
-                        <div class="n-alert" data-errType="name">
-                            <div class="orange-txt">
-                                @if(newProjectForm.error("name") != null) { <span class="warning">@Messages(newProjectForm.error("name").message())</span> }
-                                <span class="msg wrongName" style="display:none;"></span>
-                            </div>
-                        </div>
-                        <label for="project-name">@Messages("project.name.placeholder")</label>
-                    </dt>
-                    <dd>
-                        <input id="project-name" type="text" name="name" class="text" placeholder="@Messages("project.name.alert")" maxlength="250" value="@newProjectForm.field("name").value">
-                    </dd>
-                    <dt>
-                        <label for="description">@Messages("project.description.placeholder")</label>
-                    </dt>
-                    <dd>
-                        <textarea id="description" name="overview" class="text textarea.span4" style="resize:vertical;">@newProjectForm.field("overview").value</textarea>
-                    </dd>
-                </dl>
+  <div class="project-page-wrap">
+    <div class="form-wrap new-project">
+      <form id="importGit" action="@routes.ImportApp.newProject()" method="post" name="newproject" class="frm-wrap">
+        <legend>
+          @Messages("project.import.from.git")
+            <span>
+              <small>@Messages("project.import.or") &nbsp; </small>
+              <a href="@routes.ProjectApp.newProjectForm()" class="ybtn ybtn-small nm">
+                <strong>@Messages("title.newProject")</strong>
+              </a>
+            </span>
+        </legend>
+        <dl>
+          <dt>
+          <div class="n-alert" data-errType="url">
+            <div class="orange-txt">
+              @if(newProjectForm.error("url") != null) { <span class="warning">@Messages(newProjectForm.error("url").message())</span> }
+            </div>
+          </div>
+          <label>@Messages("project.git.repository.url")</label>
+          </dt>
+          <dd>
+            <input type="text" name="url" class="text" placeholder="@Messages("project.git.url.alert")" value="@newProjectForm.field("url").value">
+          </dd>
+          <dt>
+          <div class="n-alert" data-errType="owner">
+            <div class="orange-txt">
+              @if(newProjectForm.error("owner") != null) { <span class="warning">@Messages(newProjectForm.error("owner").message())</span> }
+            </div>
+          </div>
+          <label for="ownership">@Messages("project.owner")</label>
+          </dt>
+          <dd>
+            <select id="project-owner" name="owner">
+              <option data-type="user" value="@UserApp.currentUser().loginId">@UserApp.currentUser().loginId</option>
+              @for(orgUser <- orgUserList) {
+              <option data-type="group" value="@orgUser.organization.name" @if(newProjectForm.field("owner").value == orgUser.organization.name) { selected }>@orgUser.organization.name</option>
+              }
+            </select>
+          </dd>
+          <dt>
+          <div class="n-alert" data-errType="name">
+            <div class="orange-txt">
+              @if(newProjectForm.error("name") != null) { <span class="warning">@Messages(newProjectForm.error("name").message())</span> }
+              <span class="msg wrongName" style="display:none;"></span>
+            </div>
+          </div>
+          <label for="project-name">@Messages("project.name")</label>
+          </dt>
+          <dd>
+            <input id="project-name" type="text" name="name" class="text" placeholder="@Messages("project.name.alert")" maxlength="250" value="@newProjectForm.field("name").value">
+          </dd>
+          <dt>
+            <label for="description">@Messages("project.description")</label>
+          </dt>
+          <dd>
+            <textarea id="description" name="overview" class="text textarea.span4" style="resize:vertical;">@newProjectForm.field("overview").value</textarea>
+          </dd>
+        </dl>
 
-                <ul class="options unstyled">
-                    <li class="option">
-                        <div class="option-label">@Messages("project.shareOption")</div>
-                        <div class="option-desc">
-                            <input name="projectScope" type="radio" @if(newProjectForm.field("projectScope").value == "PUBLIC" || newProjectForm.field("projectScope").value == null){ checked="checked" }id="public" value="PUBLIC" class="radio-btn">
-                            <label for="public" class="bg-radiobtn label-public">@Messages("project.public")</label>
-                            <input name="projectScope" type="radio" @if(newProjectForm.field("projectScope").value == "PROTECTED"){ checked="checked" }id="protected" value="PROTECTED" class="radio-btn"@if(!Organization.isNameExist(newProjectForm.field("owner").value)){ style="display:none;"}>
-                            <label for="protected" class="bg-radiobtn label-protected"@if(!Organization.isNameExist(newProjectForm.field("owner").value)){ style="display:none;"}>@Messages("project.protected")</label>
-                            <input name="projectScope" type="radio" @if(newProjectForm.field("projectScope").value == "PRIVATE"){ checked="checked" }id="private" value="PRIVATE" class="radio-btn">
-                            <label for="private" class="bg-radiobtn label-private">@Messages("project.private")</label>
-                        </div>
-                    </li>
-                    <li id="vcs_dropdown" class="option">
-                        <div class="option-label">@Messages("project.vcs")</div>
-                        <div class="option-desc">
-                            <input name="vcs" type="text" value="GIT" readonly />
-                        </div>
-                    </li>
-                </ul>
-                <div class="actions">
-                    <button class="ybtn ybtn-info">@Messages("project.create")</button>
-                    <a href="/" class="ybtn">@Messages("button.cancel")</a>
-                </div>
-            </form>
+        <ul class="options unstyled">
+          <li class="option">
+            <div class="option-label">@Messages("project.shareOption")</div>
+            <div class="option-desc">
+              <input name="projectScope" type="radio" @if(newProjectForm.field("projectScope").value == "PUBLIC" || newProjectForm.field("projectScope").value == null){ checked="checked" }id="public" value="PUBLIC" class="radio-btn">
+              <label for="public" class="bg-radiobtn label-public">@Messages("project.public")</label>
+              <input name="projectScope" type="radio" @if(newProjectForm.field("projectScope").value == "PROTECTED"){ checked="checked" }id="protected" value="PROTECTED" class="radio-btn"@if(!Organization.isNameExist(newProjectForm.field("owner").value)){ style="display:none;"}>
+              <label for="protected" class="bg-radiobtn label-protected"@if(!Organization.isNameExist(newProjectForm.field("owner").value)){ style="display:none;"}>@Messages("project.protected")</label>
+              <input name="projectScope" type="radio" @if(newProjectForm.field("projectScope").value == "PRIVATE"){ checked="checked" }id="private" value="PRIVATE" class="radio-btn">
+              <label for="private" class="bg-radiobtn label-private">@Messages("project.private")</label>
+            </div>
+          </li>
+          <li id="vcs_dropdown" class="option">
+            <div class="option-label">@Messages("project.vcs")</div>
+            <div class="option-desc">
+              <input name="vcs" type="text" value="GIT" readonly />
+            </div>
+          </li>
+        </ul>
+        <div class="actions">
+          <button class="ybtn ybtn-info">@Messages("project.create")</button>
+          <a href="/" class="ybtn">@Messages("button.cancel")</a>
         </div>
+      </form>
     </div>
+  </div>
 </div>
 <script type="text/javascript">
-    $(document).ready(function(){
-        $yobi.loadModule("project.New", {
-            "sFormName": "newproject"
-        });
+  $(document).ready(function(){
+    $yobi.loadModule("project.New", {
+      "sFormName": "newproject"
     });
+  });
 </script>
 }
