--- a/app/views/project/importing.scala.html
+++ b/app/views/project/importing.scala.html
@@ -32,91 +32,166 @@
           @Messages("project.import.from.git")
             <span>
               <small>@Messages("project.import.or") &nbsp; </small>
-              <a href="@routes.ProjectApp.newProjectForm()" class="ybtn ybtn-small nm">
+              <a href="@routes.ProjectApp.newProjectForm()?owner=@newProjectForm.field("owner").value" class="ybtn ybtn-small nm">
                 <strong>@Messages("title.newProject")</strong>
               </a>
             </span>
         </legend>
+
         <dl>
+          <!-- Old Repository -->
           <dt>
-          <div class="n-alert" data-errType="url">
-            <div class="orange-txt">
-              @if(newProjectForm.error("url") != null) { <span class="warning">@Messages(newProjectForm.error("url").message())</span> }
-            </div>
-          </div>
-          <label>@Messages("project.git.repository.url")</label>
+            <label for="url">
+              @Messages("project.git.repository.url")
+              <strong class="orange-txt">*</strong>
+            </label>
           </dt>
           <dd>
-            <input type="text" name="url" class="text" placeholder="@Messages("project.git.url.alert")" value="@newProjectForm.field("url").value">
+            <input id="url" type="text" name="url" class="text" placeholder="@Messages("project.git.url.alert")" value="@newProjectForm.field("url").value">
+            <div class="n-alert" data-errType="url">
+              <div class="orange-txt">
+                @if(newProjectForm.error("url") != null) { <span class="warning">@Messages(newProjectForm.error("url").message())</span> }
+              </div>
+            </div>
           </dd>
+          <!-- // -->
+          <!-- ProjectOwner -->
           <dt>
-          <div class="n-alert" data-errType="owner">
-            <div class="orange-txt">
-              @if(newProjectForm.error("owner") != null) { <span class="warning">@Messages(newProjectForm.error("owner").message())</span> }
-            </div>
-          </div>
-          <label for="ownership">@Messages("project.owner")</label>
+            <label for="project-owner">
+              @Messages("project.owner")
+              <strong class="orange-txt">*</strong>
+            </label>
           </dt>
           <dd>
-            <select id="project-owner" name="owner">
-              <option data-type="user" value="@UserApp.currentUser().loginId">@UserApp.currentUser().loginId</option>
+            <select id="project-owner" name="owner" data-toggle="select2" data-format="user" class="mb10">
+              <option data-type="user"
+                      data-avatar-url="@UserApp.currentUser().avatarUrl"
+                      value="@UserApp.currentUser().loginId">
+                @UserApp.currentUser().loginId
+              </option>
+
               @for(orgUser <- orgUserList) {
-              <option data-type="group" value="@orgUser.organization.name" @if(newProjectForm.field("owner").value == orgUser.organization.name) { selected }>@orgUser.organization.name</option>
+              <option data-type="group"
+                      data-avatar-url="@urlToOrganizationLogo(orgUser.organization)"
+                      value="@orgUser.organization.name"
+              @if(newProjectForm.field("owner").value == orgUser.organization.name) { selected }>
+              @orgUser.organization.name
+              </option>
               }
             </select>
-          </dd>
-          <dt>
-          <div class="n-alert" data-errType="name">
-            <div class="orange-txt">
-              @if(newProjectForm.error("name") != null) { <span class="warning">@Messages(newProjectForm.error("name").message())</span> }
-              <span class="msg wrongName" style="display:none;"></span>
+            <div class="n-alert" data-errType="owner">
+              <div class="orange-txt">
+                @if(newProjectForm.error("owner") != null) { <span class="warning">@Messages(newProjectForm.error("owner").message())</span> }
+              </div>
             </div>
-          </div>
-          <label for="project-name">@Messages("project.name")</label>
+          </dd>
+          <!-- // -->
+
+          <!-- ProjectName -->
+          <dt>
+            <label for="project-name">
+              @Messages("project.name")
+              <strong class="orange-txt">*</strong>
+            </label>
           </dt>
           <dd>
-            <input id="project-name" type="text" name="name" class="text" placeholder="@Messages("project.name.alert")" maxlength="250" value="@newProjectForm.field("name").value">
+            <input id="project-name" type="text" name="name" class="text" maxlength="250" pattern="[a-zA-Z0-9-]+"
+                   value="@newProjectForm.field("name").value" placeholder="@Messages("project.name.alert")"  >
+            <div class="n-alert" data-errType="name">
+              <div class="orange-txt">
+                @if(newProjectForm.error("name") != null) { <span class="warning">@Messages(newProjectForm.error("name").message())</span> }
+                <span class="msg wrongName" style="display: none;"></span>
+              </div>
+            </div>
           </dd>
+          <!-- // -->
+
+          <!-- Description -->
           <dt>
             <label for="description">@Messages("project.description")</label>
           </dt>
           <dd>
-            <textarea id="description" name="overview" class="text textarea.span4" style="resize:vertical;">@newProjectForm.field("overview").value</textarea>
+            <textarea id="description" name="overview" class="text textarea.span4">@newProjectForm.field("overview").value</textarea>
           </dd>
+          <!-- // -->
         </dl>
 
-        <ul class="options unstyled">
-          <li class="option">
-            <div class="option-label">@Messages("project.shareOption")</div>
-            <div class="option-desc">
-              <input name="projectScope" type="radio" @if(newProjectForm.field("projectScope").value == "PUBLIC" || newProjectForm.field("projectScope").value == null){ checked="checked" }id="public" value="PUBLIC" class="radio-btn">
-              <label for="public" class="bg-radiobtn label-public">@Messages("project.public")</label>
-              <input name="projectScope" type="radio" @if(newProjectForm.field("projectScope").value == "PROTECTED"){ checked="checked" }id="protected" value="PROTECTED" class="radio-btn"@if(!Organization.isNameExist(newProjectForm.field("owner").value)){ style="display:none;"}>
-              <label for="protected" class="bg-radiobtn label-protected"@if(!Organization.isNameExist(newProjectForm.field("owner").value)){ style="display:none;"}>@Messages("project.protected")</label>
-              <input name="projectScope" type="radio" @if(newProjectForm.field("projectScope").value == "PRIVATE"){ checked="checked" }id="private" value="PRIVATE" class="radio-btn">
-              <label for="private" class="bg-radiobtn label-private">@Messages("project.private")</label>
+        <div class="advanced-options">
+          <!-- Access Scope -->
+          <div class="row-fluid">
+            <div class="span2 right-txt mt10">
+              @Messages("project.shareOption")
             </div>
-          </li>
-          <li id="vcs_dropdown" class="option">
-            <div class="option-label">@Messages("project.vcs")</div>
-            <div class="option-desc">
-              <input name="vcs" type="text" value="GIT" readonly />
+            <div class="span10">
+              <ul class="unstyled project-scopes mt10">
+                <li>
+                  <input type="radio" id="public" name="projectScope" value="PUBLIC" class="radio-btn pull-left" @if(newProjectForm.field("projectScope").value == "PUBLIC" || newProjectForm.field("projectScope").value == null){ checked="checked" }>
+                  <label for="public">
+                    <strong class="ml5">@Messages("project.public")</strong>
+                    <p class="note">
+                      @Html(Messages("project.public.notice"))
+                    </p>
+                  </label>
+                </li>
+
+                <li id="opt-protected" class="mt10" @if(!Organization.isNameExist(newProjectForm.field("owner").value)){ style="display:none;"}>
+                <input type="radio" id="protected" name="projectScope" value="PROTECTED" class="radio-btn pull-left" @if(newProjectForm.field("projectScope").value == "PROTECTED"){ checked="checked" }>
+                <label for="protected">
+                  <strong class="ml5">@Messages("project.protected")</strong>
+                  <p class="note">
+                    @Html(Messages("project.protected.notice"))
+                  </p>
+                </label>
+                </li>
+
+                <li class="mt10">
+                  <input type="radio" id="private" name="projectScope" value="PRIVATE" class="radio-btn pull-left" @if(newProjectForm.field("projectScope").value == "PRIVATE"){ checked="checked" }>
+                  <label for="private">
+                    <strong class="ml5">@Messages("project.private")</strong>
+                    <p class="note">
+                      @Html(Messages("project.private.notice"))
+                    </p>
+                  </label>
+                </li>
+              </ul>
             </div>
-          </li>
-        </ul>
-        <div class="actions">
-          <button class="ybtn ybtn-info">@Messages("project.create")</button>
+          </div>
+          <!-- // -->
+          <hr>
+          <!-- VCS -->
+          <div class="row-fluid">
+            <div class="span2 right-txt mt10">
+              <label for="vcs">
+                @Messages("project.vcs")
+              </label>
+            </div>
+            <div class="span10 cu-desc">
+              <select data-toggle="select2" class="mb10 mt5" disabled>
+                <option selected>@Messages("project.new.vcsType.git")</option>
+              </select>
+              <input type="hidden" name="vcs" value="GIT">
+            </div>
+          </div>
+          <!-- // -->
+        </div>
+
+        <div class="actions mt20">
+          <button class="ybtn ybtn-primary">
+            @Messages("project.create")
+          </button>
           <a href="/" class="ybtn">@Messages("button.cancel")</a>
         </div>
       </form>
     </div>
   </div>
 </div>
+
+@common.select2()
 <script type="text/javascript">
   $(document).ready(function(){
-    $yobi.loadModule("project.New", {
-      "sFormName": "newproject"
-    });
+      $yobi.loadModule("project.New", {
+          "sFormName": "newproject"
+      });
   });
 </script>
 }
