Project: improve validations for new project form

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -1405,6 +1405,7 @@
 //-- new project
 .form-wrap {
     &.new-project {
+        position:relative;
         width:700px;
         margin: 30px auto;
 
@@ -1438,6 +1439,10 @@
             padding:10px 0;
             background:#fafafa;
             .border-radius(10px);
+        }
+
+        .popover {
+            max-width:144px;
         }
     }
 }
