--- a/app/assets/stylesheets/less/_yobiUI.less
+++ b/app/assets/stylesheets/less/_yobiUI.less
@@ -50,6 +50,10 @@ input[type="search"], input[type="tel"], input[type="color"], .uneditable-input 
     .border-radius(2px);
     .box-shadow(-2px 2px 1px rgba(0,0,0,0.1));
 }
+.popover-content {
+    padding:9px 10px;
+    line-height:120%;
+}
 
 /** yobi.ui.Dropdown **/
 .dropdown-toggle {
