--- a/app/views/project/importing.scala.html
+++ b/app/views/project/importing.scala.html
@@ -27,7 +27,7 @@
 <div class="page-wrap-outer">
   <div class="project-page-wrap">
     <div class="form-wrap new-project">
-      <form id="importGit" action="@routes.ImportApp.newProject()" method="post" name="newproject" class="frm-wrap">
+      <form id="importGit" action="@routes.ImportApp.newProject()" method="post" class="frm-wrap">
         <legend>
           @Messages("project.import.from.git")
             <span>
@@ -48,11 +48,6 @@
           </dt>
           <dd>
             <input id="url" type="text" name="url" class="text" placeholder="@Messages("project.git.url.alert")" value="@newProjectForm.field("url").value">
-            <div class="n-alert" data-errType="url">
-              <div class="orange-txt">
-                @if(newProjectForm.error("url") != null) { <span class="warning">@Messages(newProjectForm.error("url").message())</span> }
-              </div>
-            </div>
           </dd>
           <!-- // -->
           <!-- ProjectOwner -->
@@ -79,11 +74,9 @@
               </option>
               }
             </select>
-            <div class="n-alert" data-errType="owner">
-              <div class="orange-txt">
-                @if(newProjectForm.error("owner") != null) { <span class="warning">@Messages(newProjectForm.error("owner").message())</span> }
-              </div>
-            </div>
+            @if(newProjectForm.error("owner") != null) {
+              <span class="orange-text">@Messages(newProjectForm.error("owner").message())</span>
+            }
           </dd>
           <!-- // -->
 
@@ -97,12 +90,6 @@
           <dd>
             <input id="project-name" type="text" name="name" class="text" maxlength="250" pattern="[a-zA-Z0-9-]+"
                    value="@newProjectForm.field("name").value" placeholder="@Messages("project.name.alert")"  >
-            <div class="n-alert" data-errType="name">
-              <div class="orange-txt">
-                @if(newProjectForm.error("name") != null) { <span class="warning">@Messages(newProjectForm.error("name").message())</span> }
-                <span class="msg wrongName" style="display: none;"></span>
-              </div>
-            </div>
           </dd>
           <!-- // -->
 
@@ -188,9 +175,10 @@
 
 @common.select2()
 <script type="text/javascript">
-  $(document).ready(function(){
+  $(function() {
       $yobi.loadModule("project.New", {
-          "sFormName": "newproject"
+          "sFormId": "#importGit",
+          "htError": @Html(newProjectForm.errorsAsJson.toString)
       });
   });
 </script>
