Fix position style for `$.popover`

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -1331,6 +1331,8 @@
 //------ login page
 .login-form-wrap,
 .signup-form-wrap {
+    position:relative;
+
     .text {
         width: 386px;
         height: 27px;
