--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -5684,3 +5684,12 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
     .btns-row { width:auto; }
     .fullsize { width:100%; }
 }
+
+.label-head {
+    color: #0088cc;
+    background-color: #fff;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 3px 5px;
+    display: inline-block;
+    .border-radius(3px);
+}
