--- a/app/assets/stylesheets/less/_markdown.less
+++ b/app/assets/stylesheets/less/_markdown.less
@@ -58,7 +58,7 @@
     border: 1px solid #ddd;
     background-color: #f8f8f8;
     border-radius: 3px;
-    font-size:0.85em
+    font-family:@fixed-font-family;
 
     .title {
       font-size:inherit;
@@ -114,7 +114,6 @@
       marign : 0;
       padding: 0;
       border : none;
-      font-size:0.85em
     }
   }
 
