`Agree` buttons on each comment are added.
Cause:
There is a VOC. It needs a function that agrees with comments.

Solution:
`Agree` buttons which like heart shape are added on each comments.

Private-issue: 1035

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -2754,6 +2754,26 @@ label.inline-list {
                                 color:@yobi-link;
                                 .opacity(100);
                             }
+
+                            &.vote-heart-disable-hover:hover {
+                              color:initial;
+                              opacity:0.2;
+                              font-size:16px;
+                            }
+                        }
+
+                        .vote-description-people {
+                            color:#3b5998
+                        }
+
+                        .vote-heart-on {
+                            font-size:16px;
+                            color:@yobi-link;
+                            opacity:1.0;
+                        }
+
+                        .vote-heart-off {
+                            font-size:16px;
                         }
                     }
 
