--- a/app/assets/stylesheets/less/_yobiUI.less
+++ b/app/assets/stylesheets/less/_yobiUI.less
@@ -1126,6 +1126,14 @@ span.issue-label {
     outline:none;
 }
 
+.btn-transparent-with-fontsize-lineheight {
+    background:transparent;
+    border:0;
+    outline:none;
+    font-size:0px;
+    line-height:normal;
+}
+
 .numberic {
     display:inline-block;
     margin-left:5px;
