--- a/app/views/issue/partial_comments.scala.html
+++ b/app/views/issue/partial_comments.scala.html
@@ -63,6 +63,8 @@
     <strong>@Messages("code.commits") <a href="@routes.CodeHistoryApp.show(project.owner, project.name, commitId)" class="link">@{"@"}@commitId</a></strong>
 }
 
+@VOTER_AVATAR_SHOW_LIMIT = @{ 5 }
+
 <div class="comment-header"><i class="yobicon-comments"></i> <strong>@Messages("common.comment")</strong> <strong class="num">@issue.comments.size</strong></div>
 <hr class="nm">
 
@@ -86,12 +88,54 @@
                 </span>
                 <a href="#comment-@comment.id" class="ago" title="@JodaDateUtil.getDateString(comment.createdDate)">@utils.TemplateHelper.agoOrDateString(comment.createdDate)</a>
                 <span class="act-row pull-right">
+                    @if(isAllowed(UserApp.currentUser(), comment.asResource(), Operation.READ) && comment.isInstanceOf[IssueComment]) {
+                        @defining(comment.asInstanceOf[IssueComment]) { issueComment =>
+                            @if(issueComment.voters.size > VOTER_AVATAR_SHOW_LIMIT) {
+                                <span style="margin-right:2px;" data-toggle="tooltip" data-html="true" title="
+                                    @for(voter <- VoteApp.getVotersForName(issueComment.voters, 0, 5)) {
+                                        @voter.name<br>
+                                    }
+                                    &hellip;">
+                                    <a class="vote-description-people" href="#voters-@issueComment.id" data-toggle="modal">
+                                        @if(issueComment.voters.size == 1) {
+                                            @Messages("common.comment.vote.agreement", issueComment.voters.size)
+                                        } else {
+                                            @Messages("common.comment.vote.agreements", issueComment.voters.size)
+                                        }
+                                    </a>
+                                </span>
+
+                                @partial_voter_list("voters-" + issueComment.id, issueComment.voters)
+                            } else {
+                                @for(voter <- issueComment.voters){
+                                    <a href="@routes.UserApp.userInfo(voter.loginId)" class="avatar-wrap smaller" data-toggle="tooltip" data-placement="top" title="@voter.name" style="margin-right:3px;">
+                                        <img src="@User.findByLoginId(voter.loginId).avatarUrl">
+                                    </a>
+                                }
+                            }
+
+                            @if(issueComment.voters.contains(UserApp.currentUser())) {
+                                <button type="button" class="btn-transparent-with-fontsize-lineheight" title="@Messages("common.comment.vote")" data-request-type="comment-vote" data-request-uri="@routes.VoteApp.unvoteComment(project.owner, project.name, issue.getNumber, comment.id)">
+                                <i class="yobicon-hearts vote-heart-on"></i>
+                                </button>
+                            } else {
+                                @if(UserApp.currentUser().isAnonymous()) {
+                                    <i class="yobicon-hearts vote-heart-off vote-heart-disable-hover"></i>
+                                } else {
+                                    <button type="button" class="btn-transparent-with-fontsize-lineheight" title="@Messages("common.comment.vote")" data-request-type="comment-vote" data-request-uri="@routes.VoteApp.voteComment(project.owner, project.name, issue.getNumber, comment.id)">
+                                    <i class="yobicon-hearts vote-heart-off"></i>
+                                    </button>
+                                }
+                            }
+                        }
+                    }
+
                     @if(isAllowed(UserApp.currentUser(), comment.asResource(), Operation.UPDATE)) {
-                        <button type="button" class="btn-transparent mr10" data-toggle="comment-edit" data-comment-id="@comment.id" title="@Messages("common.comment.edit")"><i class="yobicon-edit-2"></i></button>
+                        <button type="button" class="btn-transparent-with-fontsize-lineheight ml10" data-toggle="comment-edit" data-comment-id="@comment.id" title="@Messages("common.comment.edit")"><i class="yobicon-edit-2"></i></button>
                     }
 
                     @if(isAllowed(UserApp.currentUser(), comment.asResource(), Operation.DELETE)) {
-                        <button type="button" class="btn-transparent" data-toggle="comment-delete" data-request-uri="@routes.IssueApp.deleteComment(project.owner, project.name, issue.getNumber, comment.id)" title="@Messages("common.comment.delete")"><i class="yobicon-trash"></i></button>
+                        <button type="button" class="btn-transparent-with-fontsize-lineheight ml10" data-toggle="comment-delete" data-request-uri="@routes.IssueApp.deleteComment(project.owner, project.name, issue.getNumber, comment.id)" title="@Messages("common.comment.delete")"><i class="yobicon-trash"></i></button>
                     }
                 </span>
             </div>
